update GetServerAllConfigResp_MgmtConfig
