# app/mgmt/docs/swagger.json
@@ -325,6 +325,12 @@
                 },
                 "rpcPort": {
                     "type": "integer"
+                },
+                "superAdminId": {
+                    "type": "string"
+                },
+                "superAdminPass": {
+                    "type": "string"
                 }
             }
         },
